--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 <h3>Bookmarks</h3>
-<% if @bookmarks.any? %>
+<% if @bookmarks && @bookmarks.any? %>
   <ul class="list-group mb-3">
     <% @bookmarks.each do |bookmark| %>
       <li class="list-group-item">
@@ -11,3 +11,5 @@
   <p>No movies bookmarked yet.</p>
 <% end %>
 <%= link_to "Back to all lists", lists_path, class: "btn btn-secondary" %>
+
+<%= link_to "Add a new bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %>
