--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,5 @@
+<h1><%= @list.name %></h1>
+
 <h3>Bookmarks</h3>
 <% if @bookmarks && @bookmarks.any? %>
   <ul class="list-group mb-3">
@@ -10,6 +12,6 @@
 <% else %>
   <p>No movies bookmarked yet.</p>
 <% end %>
-<%= link_to "Back to all lists", lists_path, class: "btn btn-secondary" %>
 
+<%= link_to "Back to all lists", lists_path, class: "btn btn-secondary" %>
 <%= link_to "Add a new bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %>
