--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,8 @@
-<h1>Create a New List</h1>
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name, label: "List Name" %>
-  <%= f.button :submit, "Create", class: "btn btn-primary" %>
+<%= render "shared/navbar" %>
+
+<h1>Create a new list</h1>
+
+<%= simple_form_for(@list) do |f| %>
+  <%= f.input :name %>
+  <%= f.submit %>
 <% end %>
-<%= link_to "Back", lists_path, class: "btn btn-secondary mt-3" %>
