--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,16 @@
+<%= render "shared/navbar" %>
+
 <h1><%= @list.name %></h1>
 
-<h3>Bookmarks</h3>
-<% if @bookmarks && @bookmarks.any? %>
-  <ul class="list-group mb-3">
-    <% @bookmarks.each do |bookmark| %>
-      <li class="list-group-item">
-        <strong><%= bookmark.movie.title %></strong> | <%= bookmark.comment %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>No movies bookmarked yet.</p>
+<% @list.bookmarks.each do |bm| %>
+    <h5><%= bm.movie.title %></h5>
+    <%= link_to "Delete", bookmark_path(bm), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
 <% end %>
 
-<%= link_to "Back to all lists", lists_path, class: "btn btn-secondary" %>
-<%= link_to "Add a new bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %>
+<h4>Add a movie to the list</h4>
+
+<%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.input :comment %>
+    <%= f.association :movie %>
+    <%= f.submit %>
+<% end %>
